style: fix horizontal scroll height

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,6 +48,7 @@
   /* width */
 ::-webkit-scrollbar {
   width: 6px;
+  height:6px;
 }
 
 /* Track */
